fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ p {
 }
 
 ul {
+  width: auto;
   background-color: #F8F8F8;
 }
 
@@ -61,9 +62,14 @@ ul {
 
 .nav {
   position: fixed;
-  width: 100%;
-  top: 0;
-  height: auto;
+  top: 0px; left: 0px; right: 0px;
+  position: relative;
+  overflow: hidden;
+}
+
+.navbar {
+  position: fixed;
+  top: 0px; left: 0px; right: 0px;
   position: relative;
   overflow: hidden;
 }
